Fix: added bottom margin to the post edit create form as it was cut off on mobile

--- a/src/styles/PostCreateEditForm.module.css
+++ b/src/styles/PostCreateEditForm.module.css
@@ -1,5 +1,6 @@
 .Container {
     min-height: 343px;
+    margin-bottom: 64px;
 }
 
 .FormTitle {
